--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,35 @@ html {
 body{
     background-color: rgba(158, 250, 158, 0.507);
 }
+
+.calculator{
+    border: 2px solid black;
+    background-color: white;
+}
+
+#screen{
+    border: 2px solid blue;
+}
+
+.buttons{
+    border: 2px solid yellow
+}
+
+.operators{
+    border: 2px solid red;
+}
+
+.leftNumbers{
+    border: 2px solid blue;
+}
+
+.numbers{
+    /* border: 2px solid green; */
+}
+
+#clear{
+}
+
+#equal{
+    border: 2px solid purple;
+}
