--- a/styles.scss
+++ b/styles.scss
@@ -11,6 +11,7 @@ html {
 
 body{
     background-color: rgba(158, 250, 158, 0.507);
+    font-weight: 600;
 }
 
 .calculator{
@@ -20,6 +21,8 @@ body{
   &__screen{
     border: 2px solid black;
     height: 4rem;
+    padding-left: 9rem;
+    padding-top: 2rem;
   }
   &__operators{
     display: flex;
@@ -39,13 +42,13 @@ body{
   }
 } 
 .numbers{
-    border: 2px solid blue;
     display: inline-block;
     &__number{
       border: 2px solid green;
       width: 4rem;
       height: 2.5rem;
       margin-right: .5rem;
+      margin-bottom: .5rem;
       padding-left: 1.5rem;
       padding-top: .5rem;
     }
@@ -64,10 +67,13 @@ body{
   }
 
   .equal{
-    border: 2px solid red;
+    border: 2px solid black;
+    background-color: rgba(75, 132, 255, 0.911);
+    color: white;
     display: flex;
     width: 4rem;
-    height: 3rem;
+    height: 2.5rem;
+    margin-top: .5rem;
     align-items: center;
     justify-content: center;
   }
